--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,6 +32,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-core:17.2.1'
     implementation 'com.google.firebase:firebase-database:19.2.0'
     implementation 'com.firebase:firebase-client-android:2.5.0'
+    implementation 'com.android.support:recyclerview-v7:+'
 }
 configurations.all {
     resolutionStrategy {
