--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,8 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activity_help"></activity>
-
+        <activity android:name=".ResultActivity"></activity>
+        <activity android:name=".activity_help" />
         <activity
             android:name=".SettingsActivity"
             android:label="@string/title_activity_settings" />
